Force re-labeling of people dc
Seems like we're losing the label and dc appears outside of application in Topology view. Adding this label fix this.

--- a/docs/monitoring.adoc
+++ b/docs/monitoring.adoc
@@ -220,6 +220,7 @@ Run the following command which will build and deploy using the OpenShift extens
 [source,sh,role="copypaste"]
 ----
 mvn clean package -DskipTests -f $CHE_PROJECTS_ROOT/quarkus-workshop-labs && \
+oc label dc/people app.kubernetes.io/part-of=people --overwrite && \
 oc annotate dc/people app.openshift.io/connects-to=postgres-database --overwrite
 ----
 
