--- a/docs/monitoring.adoc
+++ b/docs/monitoring.adoc
@@ -46,7 +46,7 @@ image::add-to-project.png[Prometheus, 800]
 
 Fill out the following fields:
 
-* *Image Name*: `prom/prometheus`
+* *Image Name*: `quay.io/prometheus/prometheus`
 * *Application Name*: `prometheus`
 * *Name*: `prometheus`
 
@@ -275,7 +275,7 @@ Let's create a Grafana Dashboard for our Quarkus App!
 
 Follow the same process as before: On the {{ CONSOLE_URL }}/topology/ns/{{ USER_ID }}-project[Topology View^], click on `+Add`, and choose "Container Image", and fill in the fields:
 
-* *Image Name*: `grafana/grafana` (and then click the magnifying glass)
+* *Image Name*: `registry.redhat.io/openshift4/ose-grafana` (and then click the magnifying glass)
 * *Application*: `Create Application`
 * *Application Name*: `grafana`
 * *Name*: `grafana`
